# CudaInference

./: .gitignore  CMakeLists.txt  README.md
images/: 220px-Lenna_test_image.PPM  Lenna224.ppm  cat.ppm  dog.ppm  dog2.ppm
include/: AvgPoolLayer.hpp  BatchNormLayer.hpp  ConvLayer.hpp  Layer.hpp  LinearLayer.hpp  MaxPoolLayer.hpp  Net.hpp  ReluLayer.hpp  Tensor.hpp  argparse.hpp  common.h  compute_util.cuh  helper_functions.cuh  imagenet_map.hpp  npy.hpp  types.h
python/: export_weights.py  fc_net.pth  test_matmul.py  test_net.py  test_net_cpu.py
python/weights/: .bn1.bias.npy  .bn1.weight.npy  .conv1.weight.npy  .fc.bias.npy  .fc.weight.npy  bn1.bias.npy  bn1.running_mean.npy  bn1.running_var.npy  bn1.weight.npy  conv1.bias.npy  conv1.weight.npy  fc2.weight.npy  fc_net.pth  layer1.0.bn1.bias.npy  layer1.0.bn1.running_mean.npy  layer1.0.bn1.running_var.npy  layer1.0.bn1.weight.npy  layer1.0.bn2.bias.npy  layer1.0.bn2.running_mean.npy  layer1.0.bn2.running_var.npy  layer1.0.bn2.weight.npy  layer1.0.conv1.weight.npy  layer1.0.conv2.weight.npy  layer1.1.bn1.bias.npy  layer1.1.bn1.running_mean.npy  layer1.1.bn1.running_var.npy  layer1.1.bn1.weight.npy  layer1.1.bn2.bias.npy  layer1.1.bn2.running_mean.npy  layer1.1.bn2.running_var.npy  layer1.1.bn2.weight.npy  layer1.1.conv1.weight.npy  layer1.1.conv2.weight.npy  layer2.0.bn1.bias.npy  layer2.0.bn1.running_mean.npy  layer2.0.bn1.running_var.npy  layer2.0.bn1.weight.npy  layer2.0.bn2.running_mean.npy  layer2.0.bn2.running_var.npy  layer2.0.bn2.weight.npy  (+61 more)
python/weights_fc/: fc1.bias.npy  fc1.weight.npy  fc2.bias.npy
source/: AvgPoolLayer.cu  BatchNormLayer.cu  ConvLayer.cu  LinearLayer.cpp  LinearLayer.cu  MaxPoolLayer.cu  Net.cpp  ReluLayer.cu  Tensor.cpp  compute_util.cu  imagenet_map.cpp  main.cpp  npy.cpp
